scrum-116: refactor lucid-ai-routing-service